--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#222222">
     <link rel="manifest" href="/manifest.json">
+    <link rel="shortcut icon" href="/favicon.png">
 
     {{content-for "head"}}
 
